--- a/style.css
+++ b/style.css
@@ -38,13 +38,16 @@ h1,h2,h3,h4,h5,h6{
 
 .button {
     font-family: 'Athiti', sans-serif !important; 
-    font-size: 16px !important;
+    font-size: 14px !important;
 }
 
 .module-title{
     font-size: 40px;
-    margin: 0 0 0px;
+    margin: 0 0 20px;
     font-weight: 500;
+}
+.wpcf7-form input{
+    width: 100% !important;
 }
 /* WooCommerce style*/
 .woocommerce-billing-fields input{
