--- a/style.css
+++ b/style.css
@@ -54,4 +54,6 @@ h1,h2,h3,h4,h5,h6{
     font-family: sans-serif !important;
     font-size: 14px !important;
     letter-spacing: 0 !important;
+    text-transform: none !important;
 }
+
